[workspace]
members = [ "ensnano-design", "ensnano-interactor", "ensnano-organizer", "ensnano-scene", "ensnano-flatscene", "ensnano-gui", "ensnano-utils", "ensnano-exports"]

[package]
name = "ensnano"
version = "0.5.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = { git = "https://github.com/termhn/ultraviolet", rev = "b2fb29e" , features = ["bytemuck", "f64", "serde"] }
failure = "0.1.8"
env_logger = "0.7"
serde_json = "1.0.57"
futures = "0.3.5"
serde = "1.0.116"
serde_derive = "1.0.116"
chrono = "0.4"
simple_excel_writer = "0.1.7"
regex = "1.4.2"
mathru = "0.8.4"
rand = "0.8.3"
rand_distr = "0.4.0"
ordered-float = { version = "2.0", features = ["serde"] }
rfd = "0.4"
ensnano_organizer = { path = "ensnano-organizer" }
num_enum = "0.5.1"
cadnano-format = "0.1.0"
ensnano_design = { path = "ensnano-design" }
ensnano_interactor = { path = "ensnano-interactor" }
ensnano_scene = { path = "ensnano-scene" }
ensnano_flatscene = { path = "ensnano-flatscene" }
ensnano_gui = { path = "ensnano-gui" }
ensnano_utils = {path = "ensnano-utils" }
ensnano_exports = {path = "ensnano-exports"}
log = "0.4"
pretty_env_logger = "0.4"
tobj = "3.0"
dirs = "4.0"
ahash = "0.6.2"
color_space = "0.5.2"
confy = {git = "https://github.com/rust-cli/confy", rev = "64282241313", default-features=false, features=["yaml_conf"]}
version-compare = "0.1.0"
iced_wgpu = "0.5.1"
iced = "0.4.2"
iced_graphics = "0.3.1"
iced_winit = "0.4.0"
iced_native = "0.5.1"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[features]
log_after_renderer_setup = []
dx12_only = []

[patch.crates-io]
wgpu_glyph = { git = "https://github.com/hecrj/wgpu_glyph", rev = "f9f9adb9f134edebecfc9d20de" }
