[package]
name = "ensnano_design"
version = "0.4.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = { git = "https://github.com/termhn/ultraviolet", rev = "b2fb29e" , features = ["bytemuck", "f64", "serde"] }
bytemuck = "1.2.0"
failure = "0.1.8"
env_logger = "0.7"
serde_json = "1.0.57"
futures = "0.3.5"
serde = {version = "1.0.116", features = ["rc"] }
serde_derive = "1.0.116"
chrono = "0.4"
simple_excel_writer = "0.1.7"
regex = "1.4.2"
ahash = "0.6.2"
mathru = "0.8.4"
rand = "0.8.3"
rand_distr = "0.4.0"
ordered-float = "2.0"
material-icons = "0.1.0"
ensnano_organizer = { path = "../ensnano-organizer" }
num_enum = "0.5.1"
cadnano-format = "0.1.0"
