[package]
name = "ensnano_exports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ensnano_design = { path = "../ensnano-design" }
ensnano_utils = { path = "../ensnano-utils" }
ahash = "0.6.2"
rand = "0.8.3"
itertools = "0.10.3"
serde_json = "1.0.57"
serde = "1.0.116"
serde_derive = "1.0.116"
strum = { version = "0.24", features = ["derive"] }
