[package]
name = "ensnano_gui"
version = "0.4.0"
authors = ["thenlevy <nicolaspierrelevy@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
iced_wgpu = { version = "0.5.1", features = ["spirv"] }
iced = { version = "0.4.2", features=["image"] }
iced_graphics = "0.3.1"
iced_winit = "0.4.0"
iced_native = "0.5.1"
iced_aw = { version = "0.2.0", features = ["tab_bar"]}
ensnano_design = { path = "../ensnano-design" }
ensnano_interactor = { path = "../ensnano-interactor" }
ensnano_organizer = { path = "../ensnano-organizer" }
ensnano_utils = { path = "../ensnano-utils" }
ensnano_exports = { path = "../ensnano-exports"}
rfd = "0.4"
futures = "0.3.5"
open = "1"
color_space = "0.5.2"
log = "0.4"
paste = "1.0.5"
serde_derive = "1.0.116"
serde = "1.0.116"
