[package]
name = "ensnano_organizer"
version = "0.1.0"
authors = ["nlevy <nicolaspierrelevy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "099981c", features=["image"] }
iced_wgpu = { git = "https://github.com/hecrj/iced", rev = "099981c" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "099981c" }
iced_winit = { git = "https://github.com/hecrj/iced", rev = "099981c" }
iced_native = { git = "https://github.com/hecrj/iced", rev = "099981c" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "84ccfa8", features=["icons", "icon_text"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
num_enum = "0.5.1"

