[package]
name = "ensnano_organizer"
version = "0.1.0"
authors = ["nlevy <nicolaspierrelevy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "61c747b53589d98f477fea95f85d2ea5349666d3", features=["image"] }
iced_wgpu = { git = "https://github.com/hecrj/iced", rev = "61c747b53589d98f477fea95f85d2ea5349666d3" }
iced_graphics = { git = "https://github.com/hecrj/iced", rev = "61c747b53589d98f477fea95f85d2ea5349666d3" }
iced_winit = { git = "https://github.com/hecrj/iced", rev = "61c747b53589d98f477fea95f85d2ea5349666d3" }
iced_native = { git = "https://github.com/hecrj/iced", rev = "61c747b53589d98f477fea95f85d2ea5349666d3" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "84ccfa8", features=["icons", "icon_text"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.4"

[dev-dependencies]
num_enum = "0.5.1"

