[package]
name = "ensnano_organizer"
version = "0.1.0"
authors = ["nlevy <nicolaspierrelevy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4.2"
iced_wgpu = "0.5.0"
iced_graphics = "0.3.1"
iced_winit = "0.4.0"
iced_native = "0.5.1"
iced_style = "0.4.0"
iced_aw = { version = "0.2.0", features=["icons", "icon_text"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.4"

[dev-dependencies]
num_enum = "0.5.1"

